B&L QA/objects/Case_Record_Type_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to map Case record types with Additional Contacts, Case Notes, and Products for PH Product Complaints.</description>
    <fields>
        <fullName>Additional_Contact_Record_Type_Name__c</fullName>
        <label>Additional Contact Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Note_Record_Type_Name__c</fullName>
        <label>Case Note Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Record_Type_Name__c</fullName>
        <label>Product Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Case Record Type Mapping</label>
</CustomObject>